--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,10 @@
-name: voila-gallery-country-indicators
+name: linear-transformations
 channels:
 - conda-forge
+- anaconda
 dependencies:
-- matplotlib-base
-- pandas
+- matplotlib
+- numpy
 - ipywidgets
-- jupyterlab>=3.1
+- IPython
 - voila>=0.2.11
